# utility-programs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_build_script_gadi-gnu.sh  cmake_build_script_gadi-intel.sh  cmake_build_script_gadi.sh  cmake_build_script_ubuntu.sh  cmake_build_script_windows-vs2022.bat
makefiles/: changetext.make  gadi_install.sh  gadi_run_make.sh  mvglobal.make  raijin_install.sh  raijin_run_make.sh  run_make.sh  run_make_vm.sh  splitasciibycolumn.make  subsampleascii.make  subsetascii.make  subsetasciibypolygon.make
src/: changetext.cpp  changetext_big.cpp  memory.cpp  mvglobal.cpp  removedata.cpp  splitasciibycolumn.cpp  subsampleascii.cpp  subsetascii.cpp  subsetasciibypolygon.cpp
visualstudio/: utilities.sln
visualstudio/changetext/: changetext.sln  changetext.vcxproj  changetext.vcxproj.filters
visualstudio/memory/: memory.sln  memory.vcxproj  memory.vcxproj.filters
visualstudio/mvglobal/: mvglobal.sln  mvglobal.vcxproj  mvglobal.vcxproj.filters
visualstudio/propertysheets/: cpp-utils.props  utility-programs.props
visualstudio/removedata/: removedata.sln  removedata.vcxproj  subsetascii.vcxproj.filters
visualstudio/splitasciibycolumn/: splitasciibycolumn.sln  splitasciibycolumn.vcxproj  splitasciibycolumn.vcxproj.filters
visualstudio/subsampleascii/: subsampleascii.sln  subsampleascii.vcxproj  subsampleascii.vcxproj.filters
visualstudio/subsetascii/: subsetascii.sln  subsetascii.vcxproj  subsetascii.vcxproj.filters
visualstudio/subsetasciibypolygon/: subsetasciibypolygon.vcxproj  subsetasciibypolygon.vcxproj.filters
vs2013/changetext/: changetext.sln
vs2013/splitasciibycolumn/: splitasciibycolumn.vcxproj  splitasciibycolumn.vcxproj.filters
vs2013/subsampleascii/: subsampleascii.vcxproj.filters
vs2013/subsetasciibypolygon/: subsetasciibypolygon.sln
